logs/hw/sensor-expanded.h

typedef __uint8_t uint8_t ;
typedef __uint16_t uint16_t ;
typedef __uint32_t uint32_t ;
void os_init(int (*fn)(int argc, char **argv));
struct sensor_accel_data {
    float sad_x;
    float sad_y;
    float sad_z;


    uint8_t sad_x_is_valid:1;
    uint8_t sad_y_is_valid:1;
    uint8_t sad_z_is_valid:1;
} __attribute__((packed));
struct sensor_mag_data {
    float smd_x;
    float smd_y;
    float smd_z;

    uint8_t smd_x_is_valid:1;
    uint8_t smd_y_is_valid:1;
    uint8_t smd_z_is_valid:1;
} __attribute__((packed));
struct sensor_light_data {
    uint16_t sld_full;
    uint16_t sld_ir;
    uint32_t sld_lux;

    uint8_t sld_full_is_valid:1;
    uint8_t sld_ir_is_valid:1;
    uint8_t sld_lux_is_valid:1;
} __attribute__((packed));
struct sensor_quat_data {
    float sqd_x;
    float sqd_y;
    float sqd_z;
    float sqd_w;

    uint8_t sqd_x_is_valid:1;
    uint8_t sqd_y_is_valid:1;
    uint8_t sqd_z_is_valid:1;
    uint8_t sqd_w_is_valid:1;
} __attribute__((packed));
struct sensor_euler_data {
    float sed_h;
    float sed_r;
    float sed_p;

    uint8_t sed_h_is_valid:1;
    uint8_t sed_r_is_valid:1;
    uint8_t sed_p_is_valid:1;
} __attribute__((packed));
struct sensor_color_data {
    uint16_t scd_r;
    uint16_t scd_g;
    uint16_t scd_b;
    uint16_t scd_c;
    uint16_t scd_lux;
    uint16_t scd_colortemp;




    uint16_t scd_saturation;
    uint16_t scd_saturation75;
    uint8_t scd_is_sat;
    float scd_cratio;
    uint16_t scd_maxlux;
    uint16_t scd_ir;


    uint16_t scd_r_is_valid:1;
    uint16_t scd_g_is_valid:1;
    uint16_t scd_b_is_valid:1;
    uint16_t scd_c_is_valid:1;
    uint16_t scd_lux_is_valid:1;
    uint16_t scd_colortemp_is_valid:1;
    uint16_t scd_saturation_is_valid:1;
    uint16_t scd_saturation75_is_valid:1;
    uint16_t scd_is_sat_is_valid:1;
    uint16_t scd_cratio_is_valid:1;
    uint16_t scd_maxlux_is_valid:1;
    uint16_t scd_ir_is_valid:1;
} __attribute__((packed));
struct sensor_temp_data {
    float std_temp;


    uint8_t std_temp_is_valid:1;
} __attribute__((packed));
struct sensor_press_data {
    float spd_press;


    uint8_t spd_press_is_valid:1;
} __attribute__((packed));
struct sensor_humid_data {
    float shd_humid;


    uint8_t shd_humid_is_valid:1;
} __attribute__((packed));
struct sensor_gyro_data {
    float sgd_x;
    float sgd_y;
    float sgd_z;

    uint8_t sgd_x_is_valid:1;
    uint8_t sgd_y_is_valid:1;
    uint8_t sgd_z_is_valid:1;
} __attribute__((packed));