rust/mynewt/src/hw/sensor/bindings.rs

impl sensor_color_data {
    #[inline]
    pub fn scd_r_is_valid(&self) -> u16 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u16) }
    }
    #[inline]
    pub fn set_scd_r_is_valid(&mut self, val: u16) {
        unsafe {
            let val: u16 = ::core::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn scd_g_is_valid(&self) -> u16 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(1usize, 1u8) as u16) }
    }
    #[inline]
    pub fn set_scd_g_is_valid(&mut self, val: u16) {
        unsafe {
            let val: u16 = ::core::mem::transmute(val);
            self._bitfield_1.set(1usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn scd_b_is_valid(&self) -> u16 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(2usize, 1u8) as u16) }
    }
    #[inline]
    pub fn set_scd_b_is_valid(&mut self, val: u16) {
        unsafe {
            let val: u16 = ::core::mem::transmute(val);
            self._bitfield_1.set(2usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn scd_c_is_valid(&self) -> u16 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(3usize, 1u8) as u16) }
    }
    #[inline]
    pub fn set_scd_c_is_valid(&mut self, val: u16) {
        unsafe {
            let val: u16 = ::core::mem::transmute(val);
            self._bitfield_1.set(3usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn scd_lux_is_valid(&self) -> u16 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(4usize, 1u8) as u16) }
    }
    #[inline]
    pub fn set_scd_lux_is_valid(&mut self, val: u16) {
        unsafe {
            let val: u16 = ::core::mem::transmute(val);
            self._bitfield_1.set(4usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn scd_colortemp_is_valid(&self) -> u16 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(5usize, 1u8) as u16) }
    }
    #[inline]
    pub fn set_scd_colortemp_is_valid(&mut self, val: u16) {
        unsafe {
            let val: u16 = ::core::mem::transmute(val);
            self._bitfield_1.set(5usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn scd_saturation_is_valid(&self) -> u16 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(6usize, 1u8) as u16) }
    }
    #[inline]
    pub fn set_scd_saturation_is_valid(&mut self, val: u16) {
        unsafe {
            let val: u16 = ::core::mem::transmute(val);
            self._bitfield_1.set(6usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn scd_saturation75_is_valid(&self) -> u16 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(7usize, 1u8) as u16) }
    }
    #[inline]
    pub fn set_scd_saturation75_is_valid(&mut self, val: u16) {
        unsafe {
            let val: u16 = ::core::mem::transmute(val);
            self._bitfield_1.set(7usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn scd_is_sat_is_valid(&self) -> u16 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(8usize, 1u8) as u16) }
    }
    #[inline]
    pub fn set_scd_is_sat_is_valid(&mut self, val: u16) {
        unsafe {
            let val: u16 = ::core::mem::transmute(val);
            self._bitfield_1.set(8usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn scd_cratio_is_valid(&self) -> u16 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(9usize, 1u8) as u16) }
    }
    #[inline]
    pub fn set_scd_cratio_is_valid(&mut self, val: u16) {
        unsafe {
            let val: u16 = ::core::mem::transmute(val);
            self._bitfield_1.set(9usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn scd_maxlux_is_valid(&self) -> u16 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(10usize, 1u8) as u16) }
    }
    #[inline]
    pub fn set_scd_maxlux_is_valid(&mut self, val: u16) {
        unsafe {
            let val: u16 = ::core::mem::transmute(val);
            self._bitfield_1.set(10usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn scd_ir_is_valid(&self) -> u16 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(11usize, 1u8) as u16) }
    }
    #[inline]
    pub fn set_scd_ir_is_valid(&mut self, val: u16) {
        unsafe {
            let val: u16 = ::core::mem::transmute(val);
            self._bitfield_1.set(11usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        scd_r_is_valid: u16,
        scd_g_is_valid: u16,
        scd_b_is_valid: u16,
        scd_c_is_valid: u16,
        scd_lux_is_valid: u16,
        scd_colortemp_is_valid: u16,
        scd_saturation_is_valid: u16,
        scd_saturation75_is_valid: u16,
        scd_is_sat_is_valid: u16,
        scd_cratio_is_valid: u16,
        scd_maxlux_is_valid: u16,
        scd_ir_is_valid: u16,
    ) -> __BindgenBitfieldUnit<[u8; 2usize], u8> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 2usize], u8> =
            Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let scd_r_is_valid: u16 = unsafe { ::core::mem::transmute(scd_r_is_valid) };
            scd_r_is_valid as u64
        });
        __bindgen_bitfield_unit.set(1usize, 1u8, {
            let scd_g_is_valid: u16 = unsafe { ::core::mem::transmute(scd_g_is_valid) };
            scd_g_is_valid as u64
        });
        __bindgen_bitfield_unit.set(2usize, 1u8, {
            let scd_b_is_valid: u16 = unsafe { ::core::mem::transmute(scd_b_is_valid) };
            scd_b_is_valid as u64
        });
        __bindgen_bitfield_unit.set(3usize, 1u8, {
            let scd_c_is_valid: u16 = unsafe { ::core::mem::transmute(scd_c_is_valid) };
            scd_c_is_valid as u64
        });
        __bindgen_bitfield_unit.set(4usize, 1u8, {
            let scd_lux_is_valid: u16 = unsafe { ::core::mem::transmute(scd_lux_is_valid) };
            scd_lux_is_valid as u64
        });
        __bindgen_bitfield_unit.set(5usize, 1u8, {
            let scd_colortemp_is_valid: u16 =
                unsafe { ::core::mem::transmute(scd_colortemp_is_valid) };
            scd_colortemp_is_valid as u64
        });
        __bindgen_bitfield_unit.set(6usize, 1u8, {
            let scd_saturation_is_valid: u16 =
                unsafe { ::core::mem::transmute(scd_saturation_is_valid) };
            scd_saturation_is_valid as u64
        });
        __bindgen_bitfield_unit.set(7usize, 1u8, {
            let scd_saturation75_is_valid: u16 =
                unsafe { ::core::mem::transmute(scd_saturation75_is_valid) };
            scd_saturation75_is_valid as u64
        });
        __bindgen_bitfield_unit.set(8usize, 1u8, {
            let scd_is_sat_is_valid: u16 = unsafe { ::core::mem::transmute(scd_is_sat_is_valid) };
            scd_is_sat_is_valid as u64
        });
        __bindgen_bitfield_unit.set(9usize, 1u8, {
            let scd_cratio_is_valid: u16 = unsafe { ::core::mem::transmute(scd_cratio_is_valid) };
            scd_cratio_is_valid as u64
        });
        __bindgen_bitfield_unit.set(10usize, 1u8, {
            let scd_maxlux_is_valid: u16 = unsafe { ::core::mem::transmute(scd_maxlux_is_valid) };
            scd_maxlux_is_valid as u64
        });
        __bindgen_bitfield_unit.set(11usize, 1u8, {
            let scd_ir_is_valid: u16 = unsafe { ::core::mem::transmute(scd_ir_is_valid) };
            scd_ir_is_valid as u64
        });
        __bindgen_bitfield_unit
    }
}
#[repr(C, packed)]
#[derive(Default)]
pub struct sensor_temp_data {
    pub std_temp: f32,
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize], u8>,
}
impl sensor_temp_data {
    #[inline]
    pub fn std_temp_is_valid(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_std_temp_is_valid(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(std_temp_is_valid: u8) -> __BindgenBitfieldUnit<[u8; 1usize], u8> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize], u8> =
            Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let std_temp_is_valid: u8 = unsafe { ::core::mem::transmute(std_temp_is_valid) };
            std_temp_is_valid as u64
        });
        __bindgen_bitfield_unit
    }
}
#[repr(C, packed)]
#[derive(Default)]
pub struct sensor_press_data {
    pub spd_press: f32,
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize], u8>,
}
impl sensor_press_data {
    #[inline]
    pub fn spd_press_is_valid(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_spd_press_is_valid(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(spd_press_is_valid: u8) -> __BindgenBitfieldUnit<[u8; 1usize], u8> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize], u8> =
            Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let spd_press_is_valid: u8 = unsafe { ::core::mem::transmute(spd_press_is_valid) };
            spd_press_is_valid as u64
        });
        __bindgen_bitfield_unit
    }
}
#[repr(C, packed)]
#[derive(Default)]
pub struct sensor_humid_data {
    pub shd_humid: f32,
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize], u8>,
}
impl sensor_humid_data {
    #[inline]
    pub fn shd_humid_is_valid(&self) -> u8 {
        unsafe { ::core::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u8) }
    }
    #[inline]
    pub fn set_shd_humid_is_valid(&mut self, val: u8) {
        unsafe {
            let val: u8 = ::core::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(shd_humid_is_valid: u8) -> __BindgenBitfieldUnit<[u8; 1usize], u8> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize], u8> =
            Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let shd_humid_is_valid: u8 = unsafe { ::core::mem::transmute(shd_humid_is_valid) };
            shd_humid_is_valid as u64
        });
        __bindgen_bitfield_unit
    }
}
#[repr(C, packed)]
#[derive(Default)]
pub struct sensor_gyro_data {
    pub sgd_x: f32,
    pub sgd_y: f32,
    pub sgd_z: f32,
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize], u8>,
}
